unique class_name variable

--- a/ clean.ipynb
+++ b/ clean.ipynb
@@ -93,7 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_names = validation_generator.class_indices\n",
+    "class_names = list(validation_generator.class_indices.keys())\n",
+    "\n",
     "print(class_names)"
    ]
   },
@@ -159,7 +160,7 @@
     "\n",
     "history = model.fit(train_generator, epochs=EPOCHS, steps_per_epoch=100, validation_data = validation_generator, verbose = 1, validation_steps=3)\n",
     "\n",
-    "model.save(\"emotion.h5\")"
+    "model.save(\"trained_models/emotion.h5\")"
    ]
   },
   {
@@ -204,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uploaded = [\"./uploaded/anger12.jpg\"]\n",
+    "uploaded = [\"./data/uploaded/happy.jpg\"]\n",
     "\n",
     "img = tf.keras.utils.load_img(\n",
     "    uploaded[0], target_size=(SHAPE, SHAPE)\n",
@@ -220,12 +221,14 @@
    "outputs": [],
    "source": [
     "predictions_self = model.predict(img_array)\n",
+    "print(predictions_self)\n",
+    "\n",
     "score = tf.nn.softmax(predictions_self[0])\n",
     "\n",
     "\n",
     "print(\n",
     "    \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
-    "    .format(class_names[list(class_names.keys())[np.argmax(score)]], 100 * np.max(score))\n",
+    "    .format(class_names[np.argmax(score)], 100 * np.max(score))\n",
     ")"
    ]
   },
@@ -262,10 +265,11 @@
     "  else:\n",
     "    color = 'red'\n",
     "\n",
-    "  plt.xlabel(\"{} {:2.0f}% ({})\".format(list(class_names.keys())[np.argmax(predicted_label)],\n",
+    "  plt.xlabel(\"{} {:2.0f}% ({})\".format(class_names[predicted_label],\n",
     "                                100*np.max(predictions_array),\n",
-    "                                list(class_names.keys())[np.argmax(true_label)]),\n",
+    "                                class_names[true_label],\n",
     "                                color=color)\n",
+    "                                )\n",
     "\n",
     "def plot_value_array(i, predictions_array, true_label):\n",
     "  plt.grid(False)\n",
@@ -290,7 +294,7 @@
     "plt.subplot(1,2,1)\n",
     "plot_image(predictions[i], 3, img)\n",
     "plt.subplot(1,2,2)\n",
-    "plot_value_array(i, predictions[i],  3)\n",
+    "plot_value_array(i, predictions[i],  3 )\n",
     "plt.show()"
    ]
   }
