--- a/ clean.ipynb
+++ b/ clean.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import os\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
+    "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
@@ -39,11 +40,11 @@
     "TRAINING_DIR = \"./data/train/\"\n",
     "training_datagen = ImageDataGenerator(\n",
     "        rescale = 1./255,\n",
-    "        rotation_range=40,\n",
-    "        width_shift_range=0.6,\n",
-    "        height_shift_range=0.6,\n",
-    "        shear_range=0.6,\n",
-    "        zoom_range=0.6,\n",
+    "        rotation_range=20,\n",
+    "        width_shift_range=0.2,\n",
+    "        height_shift_range=0.2,\n",
+    "        shear_range=0.2,\n",
+    "        zoom_range=0.2,\n",
     "        horizontal_flip=True,\n",
     "        fill_mode='nearest'\n",
     "    )\n",
@@ -157,9 +158,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss = 'categorical_crossentropy', optimizer=\"nadam\", metrics=['accuracy'])\n",
+    "model.compile(loss = 'categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "\n",
-    "history = model.fit(train_generator, epochs=EPOCHS, steps_per_epoch=50, validation_data = validation_generator, verbose = 1, validation_steps=3)\n",
+    "history = model.fit(train_generator, epochs=EPOCHS, steps_per_epoch=100, validation_data = validation_generator, verbose = 1, validation_steps=3)\n",
     "\n",
     "model.save(\"trained_models/emotion.h5\")"
    ]
@@ -207,13 +208,27 @@
    "outputs": [],
    "source": [
     "# 'anger' - 0, 'disgust', 'fear', 'happiness', 'neutral', 'sadness', 'surprise'\n",
+    "\n",
     "model = tf.keras.models.load_model(\"trained_models/emotion.h5\")\n",
     "\n",
-    "uploaded = [\"./data/uploaded/happy.jpg\", \"./data/uploaded/sad.jpg\"]\n",
-    "labels = [\"happiness\", \"surprise\"]\n",
+    "# paths of the pictures loaded from the uploaded folder\n",
+    "uploaded = []\n",
+    "# labels bases on the folder name\n",
+    "labels = []\n",
+    "\n",
+    "for class_name in class_names:\n",
+    "    path = os.path.join('./data/uploaded/', class_name)\n",
+    "    for img in os.listdir(path):\n",
+    "        if (img == '.gitkeep'):\n",
+    "            continue\n",
+    "        uploaded.append(os.path.join(path, img))\n",
+    "        labels.append(class_name)\n",
+    "\n",
     "\n",
     "for i in range(len(labels)):\n",
     "    labels[i] = class_names.index(labels[i])\n",
+    "\n",
+    "print(uploaded)\n",
     "print(labels)\n",
     "\n",
     "images_predict = []\n",
@@ -324,6 +339,7 @@
     "plt.figure(figsize=(2*2*num_cols, 2*num_rows))\n",
     "for i in range(num_images):\n",
     "  predictions = probability_model.predict(images_predict[i])\n",
+    "  print(predictions[0])\n",
     "  plt.subplot(num_rows, 2*num_cols, 2*i+1)\n",
     "  plot_image(predictions[0], labels[i], images[i])\n",
     "  plt.subplot(num_rows, 2*num_cols, 2*i+2)\n",
