--- a/ clean.ipynb
+++ b/ clean.ipynb
@@ -162,7 +162,7 @@
     "\n",
     "history = model.fit(train_generator, epochs=EPOCHS, steps_per_epoch=100, validation_data = validation_generator, verbose = 1, validation_steps=3)\n",
     "\n",
-    "model.save(\"trained_models/emotion.h5\")"
+    "model.save(\"trained_models/tom/emotion.h5\")"
    ]
   },
   {
@@ -351,7 +351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3.10.8 ('tf')",
    "language": "python",
    "name": "python3"
   },
@@ -365,12 +365,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0f680dda5bd30a10a0b0b200b76a9b2ad7af859660bb14808b2d5f2b064df943"
+    "hash": "bbdaccb2afe3f69ad67c63b52f153026b9e42ec180beb1b06c01895824d38c4d"
    }
   }
  },
