refactor: Define image classes in validation to allow seperate exectution

--- a/ clean.ipynb
+++ b/ clean.ipynb
@@ -90,7 +90,9 @@
     "    target_size=(SHAPE,SHAPE),\n",
     "    class_mode='categorical',\n",
     "    batch_size=64\n",
-    ")"
+    ")\n",
+    "\n",
+    "class_names = list(validation_generator.class_indices.keys())"
    ]
   },
   {
@@ -106,8 +108,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_names = list(validation_generator.class_indices.keys())\n",
-    "\n",
     "print(class_names)"
    ]
   },
@@ -212,9 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 'anger' - 0, 'disgust', 'fear', 'happiness', 'neutral', 'sadness', 'surprise'\n",
+    "model = tf.keras.models.load_model(MODEL_FOLDER + \"emotion_larger_adam_variation.h5\")\n",
     "\n",
-    "model = tf.keras.models.load_model(MODEL_FOLDER + \"emotion.h5\")\n",
+    "class_names = ['anger', 'disgust', 'fear', 'happiness', 'neutral', 'sadness', 'surprise']\n",
     "\n",
     "# paths of the pictures loaded from the uploaded folder\n",
     "uploaded = []\n",
@@ -244,6 +244,18 @@
     "    new_image_batch = tf.expand_dims(tf.keras.utils.img_to_array(new_image), 0)\n",
     "    images_predict.append(new_image_batch)\n",
     "    images.append(new_image)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_loss, test_acc = model.evaluate(validation_generator)\n",
+    "\n",
+    "print('\\nTest accuracy:', test_acc)\n",
+    "print('\\nTest loss:', test_loss)"
    ]
   },
   {
