docs: validation description

--- a/ clean.ipynb
+++ b/ clean.ipynb
@@ -203,7 +203,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validation"
+    "# Validation\n",
+    "Validate created models by running them through some probability tests."
    ]
   },
   {
@@ -212,8 +213,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load model from file\n",
     "model = tf.keras.models.load_model(MODEL_FOLDER + \"emotion_larger_adam_variation.h5\")\n",
-    "\n",
+    "# Define class names for separate execution\n",
     "class_names = ['anger', 'disgust', 'fear', 'happiness', 'neutral', 'sadness', 'surprise']\n",
     "\n",
     "# paths of the pictures loaded from the uploaded folder\n",
@@ -221,6 +223,7 @@
     "# labels bases on the folder name\n",
     "labels = []\n",
     "\n",
+    "# Load the uploaded images of the different folders\n",
     "for class_name in class_names:\n",
     "    path = os.path.join('./data/uploaded/', class_name)\n",
     "    for img in os.listdir(path):\n",
@@ -229,21 +232,28 @@
     "        uploaded.append(os.path.join(path, img))\n",
     "        labels.append(class_name)\n",
     "\n",
-    "\n",
+    "# Transform label from string to integer identifier\n",
     "for i in range(len(labels)):\n",
     "    labels[i] = class_names.index(labels[i])\n",
     "\n",
-    "print(uploaded)\n",
-    "print(labels)\n",
-    "\n",
+    "# Images for predictions\n",
     "images_predict = []\n",
+    "# Images to showcase\n",
     "images = []\n",
     "\n",
+    "# Create the images for prediction from the paths\n",
     "for img in uploaded:\n",
     "    new_image = tf.keras.utils.load_img(img, target_size=(SHAPE, SHAPE))\n",
     "    new_image_batch = tf.expand_dims(tf.keras.utils.img_to_array(new_image), 0)\n",
     "    images_predict.append(new_image_batch)\n",
     "    images.append(new_image)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculation of test accuracy"
    ]
   },
   {
@@ -253,9 +263,12 @@
    "outputs": [],
    "source": [
     "test_loss, test_acc = model.evaluate(validation_generator)\n",
-    "\n",
     "print('\\nTest accuracy:', test_acc)\n",
-    "print('\\nTest loss:', test_loss)"
+    "print('\\nTest loss:', test_loss)\n",
+    "\n",
+    "train_loss, train_acc = model.evaluate(train_generator)\n",
+    "print('\\nTraining accuracy:', train_acc)\n",
+    "print('\\nTraining loss:', train_loss)"
    ]
   },
   {
@@ -264,13 +277,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Show textured predictions of one image\n",
     "predictions_self = model.predict(images_predict[6])\n",
     "print(predictions_self[0])\n",
     "\n",
     "score = predictions_self[0]\n",
-    "# score = tf.nn.softmax(predictions_self[0])\n",
-    "\n",
-    "\n",
     "print(\n",
     "    \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
     "    .format(class_names[np.argmax(score)], 100 * np.max(score))\n",
@@ -283,6 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Another version of displaying the predictions in text\n",
     "probability_model = tf.keras.Sequential([model])\n",
     "\n",
     "predictions = probability_model.predict(images_predict[0])\n",
@@ -292,11 +304,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Image prediction plotting\n",
+    "Based on: https://www.tensorflow.org/tutorials/keras/classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Image plot creation of specific image\n",
     "def plot_image(predictions_array, true_label, img):\n",
     "  plt.grid(False)\n",
     "  plt.xticks([])\n",
@@ -316,6 +337,7 @@
     "                                color=color)\n",
     "                                )\n",
     "\n",
+    "# Plot creation to display multiple image prediction\n",
     "def plot_value_array(predictions_array, true_label):\n",
     "  plt.grid(False)\n",
     "  plt.xticks(range(7))\n",
@@ -334,6 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot single image prediction\n",
     "i = 0\n",
     "plt.figure(figsize=(6,3))\n",
     "plt.subplot(1,2,1)\n",
@@ -347,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Image validation matrix\n",
+    "### Image validation matrix\n",
     "Here the uploaded images will be drawn in a matrix.\n"
    ]
   },
