--- a/ clean.ipynb
+++ b/ clean.ipynb
@@ -1,10 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Packages"
+    "# Packages\n",
+    "Here the libraries are imported. Important is that tensorflow with keras is used for this project to train and test the\n",
+    "modle. With matplotlib some statistic will be shown."
    ]
   },
   {
@@ -27,10 +30,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Configuration"
+    "# Configuration\n",
+    "Here the shape of the images (in our cas 80x80), the number of epochs, the number of classes and the model folder are configured."
    ]
   },
   {
@@ -47,10 +52,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data generation"
+    "# Data generation\n",
+    "For the data generation the ImageDataGenerator of tensorflow is used. It can be configured from which directory the\n",
+    "files are loaded and if there should be any variation like a rotation or not. In this project the pictures are already\n",
+    "labled by being sorted into the right folder. As a result, the ImageDataGenerator sets the lable to the foldername of\n",
+    "the image. Here two generators are use for loading the test and training data provided by\n",
+    "<https://www.kaggle.com/code/kmirfan/micro-expression-classification>."
    ]
   },
   {
@@ -96,10 +107,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image informations"
+    "# Image informations\n",
+    "Here the labels (class names) are printed to check the import of the data."
    ]
   },
   {
@@ -112,10 +125,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model creation"
+    "# Model creation\n",
+    "In this section the model is created. This model uses following combination:\n",
+    "![Architecture of the model](pictures/architecture_model.png)\n",
+    "\n",
+    "Afterwards the summary of the model is provided."
    ]
   },
   {
@@ -154,7 +172,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training"
+    "# Training\n",
+    "Now the model needs to be trained for later use. By default the adam is used as optimizer and per epoch 100 steps will\n",
+    "be done. After finishing the training, the model is saved to the specified location."
    ]
   },
   {
@@ -174,7 +194,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# History"
+    "# History\n",
+    "After the training of the model, it is interesting to analyze the training history of the model. With its help the model\n",
+    "can be optimized to overfitt not."
    ]
   },
   {
@@ -253,7 +275,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculation of test accuracy"
+    "## Calculation of test accuracy\n",
+    "This section calculates the test accuracy and training accuracy for the provided/loaded model."
    ]
   },
   {
@@ -400,7 +423,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "tf",
    "language": "python",
    "name": "python3"
   },
@@ -414,12 +437,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6 | packaged by conda-forge | (main, Oct 24 2022, 16:02:16) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "5457cff4e4e0348cc317dd2b7808ef7c0c674a3b4613bc74cfa22be171ec1d78"
    }
   }
  },
