-ADD: Pre requirements

--- a/convolutional-neural-network.ipynb
+++ b/convolutional-neural-network.ipynb
@@ -5,6 +5,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Pre-requirements\n",
+    "\n",
+    "1. Load the data from: <https://www.kaggle.com/datasets/kmirfan/micro-expressions> (last visit 10.12.2022)\n",
+    "2. paste the train data into `data/train`\n",
+    "3. paste the test data into `data/test`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Packages\n",
     "Here the libraries are imported. Important is that tensorflow with keras is used for this project to train and test the\n",
     "modle. With matplotlib some statistic will be shown."
@@ -437,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 | packaged by conda-forge | (main, Oct 24 2022, 16:02:16) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov  4 2022, 13:42:51) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
